--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,6 @@
 name: Build
 
-on: [push, pull_request]
+on: [push]
 
 jobs:
   build:
@@ -8,11 +8,11 @@ jobs:
     strategy:
       matrix:
         coq_version:
-          - '8.11'
           - '8.10.1'
+          - '8.11'
           - '8.12.2'
           - '8.13.2'
-        ocaml_version: ['4.07']
+        ocaml_version: ['minimal']
       fail-fast: false  # don't stop jobs if one fails
     steps:
       - uses: actions/checkout@v2
