--- a/coq-domains.opam
+++ b/coq-domains.opam
@@ -6,7 +6,7 @@ homepage: "https://github.com/robdockins/domains"
 dev-repo: "git+https://github.com/robdockins/domains"
 
 build: [
-  ["make"]
+  [make]
 ]
 
 depends: [
